<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#fff"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="6dp"
        android:layout_margin="8dp"
        android:id="@+id/cardView"
        card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAllCaps="true"
                android:textColor="@color/text_color"
                android:id="@+id/tvBookName"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/book_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TableRow
                android:id="@+id/hr"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/text_color"/>
            <TextView
                android:textColor="@color/text_color"
                android:textAllCaps="true"
                android:id="@+id/tvAuthorName"
                tools:text="@string/author_name"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/text_color"
                android:id="@+id/tvPrice"
                tools:text="@string/book_price"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/text_color"
                    android:textSize="13sp"
                    android:text="Name:"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@color/text_color"
                    android:textSize="13sp"
                    android:text="Email:"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout

                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/text_color"
                    android:id="@+id/tvSellerName"
                    android:textSize="13sp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@color/text_color"
                    android:id="@+id/tvSellerEmail"
                    android:textSize="13sp"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>