<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".sell.sell">


        <include layout="@layout/toolbar_layout"/>
    <TextView
        android:textColor="@color/text_color"
        android:textAllCaps="true"
        android:layout_margin="5dp"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:text="Sell your Book and Earn!"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@color/colorCardViewBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etBookName"
                    android:hint="@string/book_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:textColor="@color/colorTitle"
                    android:textSize="15dp"
                    tools:ignore="TextFields" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/email_input_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@color/colorCardViewBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etAuthor"
                    android:hint="@string/author_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:textColor="@color/colorTitle"
                    android:textSize="15dp"
                    tools:ignore="TextFields" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/email_input_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@color/colorCardViewBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:hint="e.g. 100₹"
                    android:id="@+id/etPrice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/colorTitle"
                    android:textSize="15dp"
                    tools:ignore="TextFields" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/email_input_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@color/colorCardViewBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:singleLine="true"
                    android:hint="@string/name"
                    android:id="@+id/etSellerName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:textColor="@color/colorTitle"
                    android:textSize="15dp"
                    tools:ignore="TextFields" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@color/colorCardViewBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:singleLine="true"
                    android:hint="@string/your_email_id"
                    android:id="@+id/etSellerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:textColor="@color/colorTitle"
                    android:textSize="15dp"
                    tools:ignore="TextFields" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/password_input_parent"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@color/colorCardViewBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etSellerNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@null"
                    android:hint="@string/your_whatsapp_no"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/colorTitle"
                    android:textSize="15dp"
                    tools:ignore="TextFields" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btnReq"
        android:layout_gravity="center_horizontal"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnback"
        android:text="@string/request"
        android:textColor="#ffff" />

</LinearLayout>